[package]
name = "actors"
version = "0.1.0"
edition = "2021"
description = """
Actors implemented with tokio.
"""

[[bin]]
name="actors"
path="src/bin/run.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1.13"
tracing-futures = { version = "0.2.5" }
tracing-subscriber = "0.3.9"