[package]
name = "myredis"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "mini-redis-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "mini-redis-server"
path = "src/bin/server.rs"

[dependencies]
structopt = "0.3.26"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"
tracing = "0.1.13"
tracing-futures = { version = "0.2.5" }
tracing-subscriber = "0.3.9"